fix image on iphone

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -66,7 +66,7 @@
         max-width: 100%;
         @include mobile {
             height: auto;
-            max-width: 481px;
+            max-width: 250px;
             float: none;
             display: block;
         }
